Added Resume PDF. Updated positioning.

--- a/index.html
+++ b/index.html
@@ -10,50 +10,53 @@
   </head>
   
   <body class="home">
+      <a class="btn download-link" href="Andrew J. Armas_TheaterGraphicDesigner_Resume.pdf">Download Resume</a>
+  
  
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
-       <div class="content-wrapper">
-          <header>
+     
+    <header>
+        <div class="content-wrapper">
             <h1>Andrew J. Armas</h1>
             <h2>Freelance Graphic Designer & Illustrator</h2>
 
             <p>Hi there, my name is Andrew J. Armas. I’m currently in my last year at Wake Technical Community College to complete my Associates in Graphic Design and Advertising. My goal is to become a freelance graphic designer with work that embraces a sense of drama, purpose, and an innate understanding of the impact visuals can have on an audience. I aim to provide professional services (branding, logo design & packaging design, website design, artwork, and illustrations) to small businesses, entrepreneurs, and other clients who need a fresh perspective, ensuring that each creation resonates authentically with their intended audience.</p>
-          </header>
-       </div>
+        </div>
+   </header>
+      
 
-      <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
-      <main class="content-wrapper">
-      <section>
+    <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
+    <main class="content-wrapper">
+      <section class="home-section">
         <h2>Featured Projects</h2>
-        <p>View selected projects below. More information can be found at <a href="https://www.aarmasdesign.com">aarmasdesign.com</a>.</p>
+        <p>View selected projects below. More information can be found at <a href="https://www.aarmasdesign.com">aarmasdesign.com</a>.
+        </p>
 
-        <!-- Copy the whole <section> block to add more projects. -->
-        <section>
-          <h3>Second Life Thrift Store</h3>
+        <section class="project-item">
           <img src="images/Secondlife-thumbnail-500px.png" srcset="images/Secondlife-thumbnail-1000px.png" alt="Thumbnail of Second Life Thrift Store branding">
+          <h3>Second Life Thrift Store</h3>
           <p>This was a case study in which the client was Second Life Thrift Store, a pop-up shop featuring sustainable fashion. For this case study, I acted as Creative Director and was primarly responsible for the logo and branding for Second Life.</p>
           <a class="btn" href="#" target="_blank">Case Study</a>
         </section>
 
-        <section>
-          <h3>Think Big Conference</h3>
+        <section class="project-item">
           <img src="images/ThinkBigCon-Thumbnail-500px.png" srcset="images/ThinkBigCon-Thumbnail-1000px.png 2x" alt="Thumbnail of Think Big Conference branding">
+          <h3>Think Big Conference</h3>
           <p>For this project, I was tasked with creating a logo, brand guide, promotional and advertising materials. The "Think Big Conference" is a dynamic gathering tailored for artistic entrepreneurs seeking to blend their creative talents with business acumen.</p>
           <a class="btn" href="#" target="_blank">View Project</a>
         </section>
 
-        <section>
-          <h3>Apotherie Spa</h3>
+        <section class="project-item">
           <img src="images/apotherie-thumbnail-500px.png" srcset="images/apotherie-thumbnail-1000px.png" alt="Thumbnail of Apotherie Spa branding">
+          <h3>Apotherie Spa</h3>
           <p>For this project, I was tasked with the creation of the logo, branding, booklet, intake form, large format print and product packaging. The client was "Apthorie Spa & Wellness Center" that focused on modern, boho and organic imagery, practices and treatments.</p>
           <a class="btn" href="#" target="_blank">View Project</a>
         </section>
-
         <!-- End of Project block. -->
       </section>
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
-      <section>
+      <section class="home-section">
         <h2>Work Experience</h2>
         <!--<p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>-->
 
@@ -78,7 +81,7 @@
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-      <section>
+      <section class="home-section">
         <h2>Education</h2>
 
         <!-- Copy this whole <section> block to add more schools. -->
@@ -102,6 +105,8 @@
         <!-- End of School block. -->
       </section>
 
+    </main>
+
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
         <h2>Let's Keep in Touch!</h2>
@@ -115,6 +120,6 @@
           <li><a href="#" target="_blank"><img src="images/icon-logo-instagram.png" alt="My Instagram profile"></a></li>
         </ul>
       </footer>
-    </main>
+   
   </body>
 </html>
