Updated text, padding, margin sizes.

--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
         <section class="education-item">
           <h3>Wake Technical Community College - Raleigh, NC</h3>
           <p>AAS in Graphic Design & Advertising, 2019-2025</p>
-          <p>Summary or accomplishments.</p>
+          <p>Current pursuit. This degree will add to my design repertoire by providing additional knowledge and skills with industry-standard tools and practices in a variety of areas (Print Production, Social Media, Wed Design & Advertising) </p>
         </section>
 
         <section class="education-item">
           <h3>Southern Illinois University - Carbondale, IL</h3>
           <p>MFA in Theater; Technical Direction, 2015-2018</p>
-          <p>Summary or accomplishments.</p>
+          <p>This MFA degree in theater emphasized practical expertise in technical direction, scenic construction, and production management. The degree provided advance practices and theories in art and design, especially pertaining to scenic design.</p>
         </section>
 
         <section class="education-item">
           <h3>Florida Atlantic University - Boca Raton, FL</h3>
           <p>BA in Theater Design & Technology, 2011-2015</p>
-          <p>Summary or accomplishments.</p>
+          <p>Graduated on the Dean's List and Magma Cum Laude. This degree establishing general design processes and theories. Provided a basis of practical and advanced skills in lighting, sound, scenery and technical direction.</p>
         </section>
         <!-- End of School block. -->
       </section>
